documentation/0.8/_sources/components/range_replicator.rst.txt
..
   !!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!
   WARNING:  This is a generated file.  Do not edit it manually!
   !!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!

.. index::
   single: Range Replicator
   single: Paradigm Components; Range Replicator

.. _Range Replicator:

Range Replicator
================


Description
-----------
A construct that replicates its contents (textually) at parse time.  Each replication assigns a different, sequential value to the specified `variable`_ (similar to a `for loop <https://en.wikipedia.org/wiki/For_loop>`_). This can be used, for example, to generate a separate `Trial` for each element in a `Stimulus Group` by using the replicator variable as the index in to the group.



Signature
---------
``range_replicator``


Required Parameters
-------------------

variable
^^^^^^^^

Replicator variable.  The variable must have local scope.


from
^^^^

First value assigned to `variable`_


to
^^

Replication stops when `variable`_ is greater than this value


step
^^^^

Amount by which to increment the value of `variable`_ after each replication.  Must be greater than zero.


